frontend/test/should_pass/induced_006.grg
rule r {
	induced pattern {
		x:Node --> y:Node;
		y --> y;
		y --> y;
		z:Node;
	}
	modify {
	}
}

