frontend/test/should_fail/edge_006.grg
rule r {
	modify {
		x:Node ?-e:AEdge-? y:Node;
	}
}
